feature: Client Interface (#5)
* feat: client ui

* tmp: clean after AI

* tmp: trust store (generated UI)

* feat: transactional launcher

* feat: replace ui on cli

* feat: README.md added

---------

Co-authored-by: andrey.morozov <moroz12032005@icloud.com>